--- a/scrabble/index.html
+++ b/scrabble/index.html
@@ -357,8 +357,10 @@
             </div>
             <div class="total" id="total-player1">0</div>
             <div class="row">
-                <label for="score-player1"></label><input id="score-player1" type="number" inputmode="numeric" placeholder="+ points"/>
-                <label for="note-player1"></label><input id="note-player1" type="text" placeholder="note (optional) e.g., QUIZ +50"/>
+                <label for="score-player1"></label><input id="score-player1" type="number" inputmode="numeric"
+                                                          placeholder="+ points"/>
+                <label for="note-player1"></label><input id="note-player1" type="text"
+                                                         placeholder="note (optional) e.g., QUIZ +50"/>
                 <button id="add-player1">Add turn</button>
             </div>
         </div>
@@ -370,8 +372,10 @@
             </div>
             <div class="total" id="total-player2">0</div>
             <div class="row">
-                <label for="score-player2"></label><input id="score-player2" type="number" inputmode="numeric" placeholder="+ points"/>
-                <label for="note-player2"></label><input id="note-player2" type="text" placeholder="note (optional) e.g., JAZZ +64"/>
+                <label for="score-player2"></label><input id="score-player2" type="number" inputmode="numeric"
+                                                          placeholder="+ points"/>
+                <label for="note-player2"></label><input id="note-player2" type="text"
+                                                         placeholder="note (optional) e.g., JAZZ +64"/>
                 <button id="add-player2">Add turn</button>
             </div>
         </div>
@@ -383,7 +387,8 @@
             </div>
             <div class="total" id="total-player3">0</div>
             <div class="row">
-                <label for="score-player3"></label><input id="score-player3" type="number" inputmode="numeric" placeholder="+ points"/>
+                <label for="score-player3"></label><input id="score-player3" type="number" inputmode="numeric"
+                                                          placeholder="+ points"/>
                 <label for="note-player3"></label><input id="note-player3" type="text" placeholder="note (optional)"/>
                 <button id="add-player3">Add turn</button>
             </div>
@@ -396,7 +401,8 @@
             </div>
             <div class="total" id="total-player4">0</div>
             <div class="row">
-                <label for="score-player4"></label><input id="score-player4" type="number" inputmode="numeric" placeholder="+ points"/>
+                <label for="score-player4"></label><input id="score-player4" type="number" inputmode="numeric"
+                                                          placeholder="+ points"/>
                 <label for="note-player4"></label><input id="note-player4" type="text" placeholder="note (optional)"/>
                 <button id="add-player4">Add turn</button>
             </div>
