--- a/monopoly/index.html
+++ b/monopoly/index.html
@@ -380,8 +380,8 @@
                 <button class="danger" id="resetBtn">Reset game</button>
             </div>
 
-            <div class="footer">Tip: Tap a player card to make it their turn. Different devices/browsers won’t share
-                state.
+            <div class="footer">Tip: Tap a player card to make it their turn. Different devices/browsers won't share
+                state. | <a href="https://buymeacoffee.com/pivovarit" target="_blank" rel="noopener">Buy me a coffee</a>
             </div>
         </div>
     </section>
