--- a/scrabble/index.html
+++ b/scrabble/index.html
@@ -442,7 +442,8 @@
         </div>
 
         <div class="footer">
-            Tip: The game saves in your browser (localStorage). Different devices/browsers won’t share state.
+            Tip: The game saves in your browser (localStorage). Different devices/browsers won't share state.
+            | <a href="https://buymeacoffee.com/pivovarit" target="_blank" rel="noopener">Buy me a coffee</a>
         </div>
     </section>
 </div>
