--- a/index.html
+++ b/index.html
@@ -126,6 +126,26 @@
             margin: 2rem auto;
         }
 
+        .footer {
+            margin-top: 2rem;
+            font-size: 0.8rem;
+            color: #555;
+        }
+
+        .footer a {
+            color: #555;
+            text-decoration: none;
+            transition: color 0.2s ease;
+        }
+
+        .footer a:hover {
+            color: #888;
+        }
+
+        .footer .separator {
+            margin: 0 0.5rem;
+        }
+
         @media (max-width: 480px) {
             h1 {
                 font-size: 1.6rem;
@@ -162,6 +182,12 @@
         <a href="https://linkedin.com/in/gpiwowarek" target="_blank">LinkedIn</a>
         <a href="https://stackoverflow.com/users/2229438" target="_blank">Stack Overflow</a>
         <a href="mailto:gpiwowarek@gmail.com">Email</a>
+    </div>
+
+    <div class="footer">
+        <a href="https://github.com/sponsors/pivovarit" target="_blank">GitHub Sponsors</a>
+        <span class="separator">·</span>
+        <a href="https://buymeacoffee.com/pivovarit" target="_blank">Buy me a coffee</a>
     </div>
 </div>
 
