--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
         .link {
             display: block;
+            position: relative;
             padding: 0.9rem 1.5rem;
             background: #151515;
             border: 1px solid #252525;
@@ -99,6 +100,17 @@
             background: #1a1a1a;
             border-color: #333;
             transform: translateY(-1px);
+        }
+
+        .link .arrow {
+            position: absolute;
+            left: 1rem;
+            opacity: 0;
+            transition: opacity 0.2s ease;
+        }
+
+        .link:hover .arrow {
+            opacity: 1;
         }
 
         .social {
@@ -171,7 +183,7 @@
     <p class="tagline">Java Champion</p>
 
     <div class="links">
-        <a href="http://4comprehension.com" class="link" target="_blank">Blog</a>
+        <a href="http://4comprehension.com" class="link" target="_blank"><span class="arrow">&lt;-</span>Blog</a>
     </div>
 
     <div class="divider"></div>
