--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <img src="/images/profile.jpg" alt="Grzegorz Piwowarek" class="profile-image">
 
     <h1>Grzegorz Piwowarek</h1>
-    <p class="tagline">Java Champion</p>
+    <p class="tagline">I help teams deliver robust distributed systems</p>
 
     <div class="links">
         <a href="https://4comprehension.com" class="link" target="_blank"><span class="arrow">&lt;-</span>Blog</a>
