--- a/index.html
+++ b/index.html
@@ -80,10 +80,17 @@
         }
 
         .tagline {
-            font-size: 1.1rem;
-            color: #888;
+            font-size: 1.35rem;
+            color: #999;
             margin-bottom: 2rem;
             font-weight: 300;
+            line-height: 1.5;
+        }
+
+        .tagline em {
+            font-style: normal;
+            color: #fff;
+            font-weight: 500;
         }
 
         .links {
@@ -175,7 +182,7 @@
             }
 
             .tagline {
-                font-size: 1rem;
+                font-size: 1.15rem;
             }
 
             .profile-image {
@@ -193,7 +200,7 @@
     <img src="/images/profile.jpg" alt="Grzegorz Piwowarek" class="profile-image">
 
     <h1>Grzegorz Piwowarek</h1>
-    <p class="tagline">I help teams deliver robust distributed systems</p>
+    <p class="tagline">I help teams deliver <em>robust</em> and <em>reliable</em> distributed systems</p>
 
     <div class="links">
         <a href="https://4comprehension.com" class="link" target="_blank"><span class="arrow">&lt;-</span>Blog</a>
