--- a/index.html
+++ b/index.html
@@ -203,12 +203,13 @@
     <p class="tagline">I help teams deliver <em>robust</em> and <em>reliable</em> distributed systems</p>
 
     <div class="links">
-        <a href="https://4comprehension.com" class="link" target="_blank"><span class="arrow">&lt;-</span>Blog</a>
+        <a href="mailto:contact@4comprehension.com" class="link"><span class="arrow">&lt;-</span>Get in Touch</a>
     </div>
 
     <div class="divider"></div>
 
     <div class="social">
+        <a href="https://4comprehension.com" target="_blank">Blog</a>
         <a href="https://twitter.com/pivovarit" target="_blank">Twitter</a>
         <a href="https://github.com/pivovarit" target="_blank">GitHub</a>
         <a href="https://linkedin.com/in/gpiwowarek" target="_blank">LinkedIn</a>
