--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     <div class="social">
         <a href="https://4comprehension.com" target="_blank">Blog</a>
-        <a href="https://twitter.com/pivovarit" target="_blank">Twitter</a>
+        <a href="https://twitter.com/pivovarit" target="_blank">X</a>
         <a href="https://github.com/pivovarit" target="_blank">GitHub</a>
         <a href="https://linkedin.com/in/gpiwowarek" target="_blank">LinkedIn</a>
         <a href="mailto:gpiwowarek@gmail.com">Email</a>
