--- a/index.html
+++ b/index.html
@@ -79,6 +79,25 @@
             letter-spacing: -0.02em;
         }
 
+        .tags {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 0.5rem;
+            margin-bottom: 1.25rem;
+        }
+
+        .tag {
+            font-size: 0.75rem;
+            font-weight: 500;
+            color: #999;
+            background: #1a1a1a;
+            border: 1px solid #2a2a2a;
+            border-radius: 999px;
+            padding: 0.25rem 0.75rem;
+            letter-spacing: 0.02em;
+        }
+
         .tagline {
             font-size: 1.35rem;
             color: #999;
@@ -200,6 +219,12 @@
     <img src="/images/profile.jpg" alt="Grzegorz Piwowarek" class="profile-image">
 
     <h1>Grzegorz Piwowarek</h1>
+    <div class="tags">
+        <span class="tag">Java Champion</span>
+        <span class="tag">Oracle ACE</span>
+        <span class="tag">OSS Creator</span>
+        <span class="tag">WarsawJUG</span>
+    </div>
     <p class="tagline">I help teams deliver <em>robust</em> and <em>reliable</em> distributed systems</p>
 
     <div class="links">
