--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -174,6 +174,10 @@
         fetch('opinions.json')
             .then(res => res.json())
             .then(data => {
+                for (let i = data.length - 1; i > 0; i--) {
+                    const j = Math.floor(Math.random() * (i + 1));
+                    [data[i], data[j]] = [data[j], data[i]];
+                }
                 renderOpinions(data);
                 openModal();
             })
