--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
         <a href="https://twitter.com/pivovarit" target="_blank">X</a>
         <a href="https://github.com/pivovarit" target="_blank">GitHub</a>
         <a href="https://linkedin.com/in/gpiwowarek" target="_blank">LinkedIn</a>
+        <a href="https://bsky.app/profile/pivovarit.bsky.social" target="_blank">Bluesky</a>
         <a href="mailto:gpiwowarek@gmail.com">Email</a>
     </div>
 
