--- a/index.html
+++ b/index.html
@@ -299,8 +299,13 @@
     <p class="tagline">I help teams deliver <em>robust</em> and <em>reliable</em> distributed systems</p>
     <p class="subtitle">Consulting · Mentoring · Workshops</p>
 
+    <div class="testimonial">
+        <blockquote>"The team scaled to double the size and was deploying to production ten times as frequently as before with higher quality."</blockquote>
+        <cite>— Can Gencer, Director of Engineering at Hazelcast</cite>
+    </div>
+
     <div class="links">
-        <a href="mailto:contact@4comprehension.com" class="link"><span class="arrow">&lt;-</span>Get in Touch</a>
+        <a href="mailto:contact@4comprehension.com" class="link"><span class="arrow">&lt;-</span>Discuss Your Project</a>
     </div>
 
     <div class="divider"></div>
