--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <span class="tag">WarsawJUG</span>
     </div>
     <p class="tagline">I help teams deliver <em>robust</em> and <em>reliable</em> distributed systems</p>
-    <p class="subtitle">Consulting · Mentoring · Workshops</p>
+    <p class="subtitle">AI · Consulting · Mentoring · Workshops</p>
 
     <div class="testimonial">
         <blockquote>"The team scaled to double the size and was deploying to production ten times as frequently as before with higher quality."</blockquote>
@@ -305,7 +305,7 @@
     </div>
 
     <div class="links">
-        <a href="mailto:contact@4comprehension.com" class="link"><span class="arrow">&lt;-</span>Discuss Your Project</a>
+        <a href="mailto:contact@4comprehension.com" class="link"><span class="arrow">&lt;-</span>Get in Touch</a>
     </div>
 
     <div class="divider"></div>
