--- a/cfp/index.html
+++ b/cfp/index.html
@@ -348,6 +348,7 @@
         { src: 'img/1.jpg', label: 'Headshot' },
         { src: 'img/2.jpg', label: 'Devoxx' },
         { src: 'img/3.jpg', label: 'JDD' },
+        { src: 'img/4.png', label: 'Lego' },
     ];
 
     let currentLang = 'en';
